samples/_failures_safe/1761088142_bbffec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c345ad8c.c: In function ‘main’:
./samples/SAFE/__tmp_c345ad8c.c:147:5: error: expected declaration or statement at end of input
  147 |     }
      |     ^
